changed wd/root.dir to github repo. added data files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,14 @@
 .RData
 .Ruserdata
 README.md
+CallingDataPond1.csv
+CallingDataPond2.csv
+CallingDataPond3.csv
+CallingDataPond4.csv
+CallingDataPond5.csv
+CallingDataPond6.csv
+CallingDataPond7.csv
+CallingDataPond8.csv
+filtered_all.csv
+over_year.csv
+over_year_err.csv
